force-app/main/default/objects/order__c/order__c.object-meta.xml
<CustomObject>
    <label>order</label>
    <nameField>
        <displayFormat>ORD-{0000}</displayFormat>
        <label>order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>