force-app/main/default/objects/order__c/fields/Order_Date_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Order_Date_And_Time__c</fullName>
    <label>Order Date And Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>